align main container fields and fix woah bar

--- a/main2.css
+++ b/main2.css
@@ -7,10 +7,12 @@ body {
 }
 h3 {
 	font-family: Oswald;
-	font-size: 61px;
+	font-size: 60px;
+	padding-left: 170px;
 	margin-bottom: 10px;
 	color: #083452;
 	line-height: 70px;
+	letter-spacing: 0.5px;
 }
 h1 {
 	margin-top: 180px;
@@ -79,14 +81,15 @@ h4 {
 }
 .leftbar {
 	display: inline-block;
-	padding-left: 150px;
 	font-family: Asap;
-	width: 590px;
+	width: 770px;
 	padding-bottom: 0px;
+	margin-right: 50px;
 }
 .paragraph1{
 	font-family: Asap;
 	font-size: 16px;
+	margin-left: 170px;
 	line-height: 26px;
 	margin-bottom: -4px;
 }
@@ -94,6 +97,7 @@ h4 {
 	font-family: Asap;
 	font-size: 16px;
 	line-height: 26px;
+	margin-left: 170px;
 	margin-bottom: -4px;
 }
 .userpicsmall{
@@ -102,6 +106,7 @@ h4 {
 	height: 45px;
 	margin-top: -5px;
 	margin-bottom: 1px;
+	margin-left: 170px;
 }
 .userinfosmall{
 	font-size: 13px;
@@ -179,7 +184,6 @@ h4 {
 	text-align: center;
 	border: 1px;
 	font-family: Asap;
-	padding-right: 150px;
 	padding-left: 20px;
 	padding-top: 82px;
 	display: inline-block;
@@ -192,7 +196,7 @@ h4 {
 }
 .paddle {
 	margin-bottom: 8px;
-	width: 300px;
+	width: 277px;
 	height: 300px;	
 }
 .woah {
@@ -203,6 +207,7 @@ h4 {
 	color: #106db3;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	margin-left: 170px;
 	margin-top: 30px;
 	margin-bottom: 23px;
 }
